@startuml class_diagram
skinparam backgroundColor #FEFEFE
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam classFontSize 12

title Class Diagram
title Sistem Prediksi Penyebaran DBD - RSUD Lubuk Basung

class User {
    - id: Integer (PK)
    - username: String(50) UNIQUE
    - password: String(255)
    - role: Enum(admin,petugas)
    - created_at: DateTime
    --
    + check_password(password): Boolean
    + login(): Boolean
    + logout(): Void
    + create(): Boolean
    + update(): Boolean
    + delete(): Boolean
}

class PasienDBD {
    - id: Integer (PK)
    - no_rm: String(20) UNIQUE
    - nama_pasien: String(100)
    - usia: Integer
    - jenis_kelamin: Enum(L,P)
    - lama_rawat: Integer
    - tanggal_masuk: Date
    - tanggal_keluar: Date
    - bulan: String(20)
    - tahun: Integer
    - created_at: DateTime
    --
    + create(): Boolean
    + read(): List
    + update(): Boolean
    + delete(): Boolean
    + getByBulan(): List
}

class KasusBulanan {
    - id: Integer (PK)
    - bulan: String(20)
    - tahun: Integer
    - jumlah_kasus: Integer
    - jumlah_sembuh: Integer
    - jumlah_meninggal: Integer
    - tingkat_risiko: Enum(...)
    - created_at: DateTime
    --
    + create(): Boolean
    + read(): List
    + update(): Boolean
    + getByTahun(tahun): List
    + getStatistik(): Object
}

class HasilPrediksi {
    - id: Integer (PK)
    - tanggal_prediksi: DateTime
    - bulan_prediksi: String(20)
    - tahun_prediksi: Integer
    - jumlah_kasus_prediksi: Integer
    - tingkat_risiko_prediksi: Enum(...)
    - confidence_score: Decimal(5,2)
    - model_version: String(50)
    - created_by: Integer (FK)
    - created_at: DateTime
    --
    + create(): Boolean
    + read(): List
    + getByTahun(tahun): List
    + getLatest(): Object
    + predict(data): Object
}

class ModelEvaluasi {
    - id: Integer (PK)
    - tanggal_training: DateTime
    - accuracy: Decimal(5,4)
    - precision: Decimal(5,4)
    - recall: Decimal(5,4)
    - f1_score: Decimal(5,4)
    - n_estimators: Integer
    - max_depth: Integer
    - cv_score: Decimal(5,4)
    - created_at: DateTime
    --
    + create(): Boolean
    + read(): List
    + getLatest(): Object
    + getMetrics(): Object
}

class LogAktivitas {
    - id: Integer (PK)
    - user_id: Integer (FK)
    - aksi: String(100)
    - deskripsi: Text
    - ip_address: String(45)
    - created_at: DateTime
    --
    + create(): Boolean
    + read(): List
    + getByUser(user_id): List
    + filter(filters): List
}

User "1" -- "many" HasilPrediksi : creates
User "1" -- "many" LogAktivitas : logs

@enduml
